<resources>
    <string name="app_name">Apartment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome User</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="msg_token_fmt">MyToken</string>
    <string name="apartment_services">Apartment Services</string>
    <string name="action_exit">Exit</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="daily_fresh">Daily Fresh</string>
    <string name="car_wash">Car Wash</string>
    <string name="my_laundry">My Laundry</string>
    <string name="mineral_water">Mineral Water</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="checkout">Checkout</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="description">Description</string>
    <string name="home">Home</string>
    <string name="select_apartment">Select Apartment</string>
    <string name="select_flat_no">Select Flat No</string>
    <string name="select_service">Select Service</string>
    <string name="apartment_name">Apart Name</string>
    <string name="fcm_token">FCM Token : %s</string>
    <string-array name="spinner_apartment_name">
        <item>Select Apartment</item>
        <item>Apartment A</item>
        <item>Apartment B</item>
        <item>Apartment C</item>
    </string-array>
    <string-array name="spinner_area_name">
        <item>Select Area</item>
        <item>Area A</item>
        <item>Area B</item>
        <item>Area C</item>
    </string-array>
    <string-array name="spinner_pin">
        <item>--select pin code--</item>
        <item>560068</item>
        <item>560035</item>
    </string-array>
    <string-array name="spinner_count">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
    </string-array>
</resources>
