<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_pro_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_water"
            android:icon="@drawable/ic_pro_water"
            android:title="@string/mineral_water" />
        <item
            android:id="@+id/nav_laundry"
            android:icon="@drawable/ic_pro_laundry"
            android:title="@string/my_laundry" />
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/ic_pro_car_wash"
            android:title="@string/car_wash" />
        <item
            android:id="@+id/nav_fresh"
            android:icon="@drawable/ic_pro_fresh"
            android:title="@string/daily_fresh" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_pro_orders"
            android:title="@string/my_orders" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_pro_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
